Refurbished LanguagePropertiesManager application